--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-inject-live-reload": "^1.0.2",
     "ember-cli-qunit": "0.1.0",
     "ember-data": "1.0.0-beta.10",
+    "ember-moment": "^0.1.0",
     "express": "^4.8.5",
     "glob": "^4.0.5"
   }
