--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,7 @@
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
-    "ember": "1.7.0",
-    "ember-data": "1.0.0-beta.10",
+    "ember": "canary",
     "ember-resolver": "~0.1.7",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
@@ -16,5 +15,8 @@
     "momentjs": "^2.8.3",
     "normalize-css": "~3.0.1",
     "json2": "*"
+  },
+  "resolutions": {
+    "ember": "canary"
   }
 }
