--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
-    "ember": "canary",
+    "ember": "1.8.0",
     "ember-resolver": "~0.1.7",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
@@ -16,8 +16,5 @@
     "normalize-css": "~3.0.1",
     "json2": "*",
     "bootstrap": "~3.2.0"
-  },
-  "resolutions": {
-    "ember": "canary"
   }
 }
