--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "ember-cli-addon-search",
   "dependencies": {
     "handlebars": "~1.3.0",
-    "jquery": "^1.11.1",
-    "ember": "1.8.0",
+    "jquery": "~2.1.1",
+    "ember": "~1.8.0",
     "ember-resolver": "~0.1.7",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
@@ -14,7 +14,6 @@
     "qunit": "~1.15.0",
     "momentjs": "^2.8.3",
     "normalize-css": "~3.0.1",
-    "json2": "*",
     "bootstrap": "~3.2.0"
   }
 }
