--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
   "name": "ember-cli-addon-search",
   "dependencies": {
-    "handlebars": "~1.3.0",
+    "handlebars": "~2.0.0",
     "jquery": "~2.1.1",
-    "ember": "1.8.1",
-    "ember-resolver": "~0.1.10",
-    "loader.js": "stefanpenner/loader.js#1.0.1",
-    "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
+    "ember": "1.9.1",
+    "ember-resolver": "~0.1.11",
+    "loader.js": "ember-cli/loader.js#1.0.1",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
-    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
     "ember-qunit": "0.1.8",
-    "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0",
+    "ember-qunit-notifications": "0.0.5",
+    "qunit": "~1.17.1",
     "momentjs": "^2.8.3",
     "normalize-css": "~3.0.1",
     "bootstrap": "~3.2.0"
