--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "ember-addons-website",
   "dependencies": {
     "handlebars": "~2.0.0",
-    "jquery": "^1.11.1",
+    "jquery": "2.1.3",
     "ember": "canary",
     "ember-data": "1.0.0-beta.12",
     "ember-resolver": "~0.1.11",
