--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "broccoli-asset-rev": "^2.0.0",
     "ember-cli": "^0.1.13",
     "ember-cli-6to5": "^3.0.0",
-    "ember-cli-app-version": "0.3.0",
+    "ember-cli-app-version": "^0.3.1",
     "ember-cli-dependency-checker": "0.0.7",
     "ember-cli-htmlbars": "^0.6.0",
     "ember-cli-ic-ajax": "0.1.1",
