--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "ember-export-application-global": "^1.0.0",
     "ember-moment": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "4.4.0"
   }
 }
