--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,15 @@
   "name": "ember-addons-website",
   "dependencies": {
     "jquery": "2.1.3",
-    "ember": "1.10.0",
-    "ember-data": "1.0.0-beta.12",
-    "ember-resolver": "~0.1.11",
-    "loader.js": "ember-cli/loader.js#1.0.1",
+    "ember": "1.11.0",
+    "ember-data": "1.0.0-beta.16.1",
+    "ember-resolver": "~0.1.15",
+    "loader.js": "ember-cli/loader.js#3.2.0",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.1.0",
+    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
-    "ember-qunit": "0.1.8",
-    "ember-qunit-notifications": "0.0.5",
+    "ember-qunit": "0.3.0",
+    "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
     "bootstrap": "~3.3.2",
     "ember-cli-moment-shim": "~0.0.3",
