--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember test"
+    "test": "ember try:testall"
   },
   "repository": "",
   "engines": {
@@ -32,6 +32,7 @@
     "ember-data": "1.0.0-beta.19.2",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-moment": "^1.0.0"
+    "ember-moment": "^1.0.0",
+    "ember-try": "0.0.4"
   }
 }
