--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
     "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-filter-by-query": "^1.0.0",
+    "ember-cli-filter-by-query": "1.0.3",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
