--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,11 @@
     "qunit": "~1.17.1",
     "bootstrap": "~3.3.2",
     "ember-cli-moment-shim": "~0.0.3",
-    "sifter": "~0.4.1"
+    "sifter": "~0.4.1",
+    "clipboard": "~1.5.5"
   },
   "resolutions": {
-    "ember": "2.0.0-beta.1"
+    "ember": "2.0.0-beta.1",
+    "qunit-notifications": "~0.1.0"
   }
 }
