--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-filter-by-query": "1.0.3",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-moment-shim": "0.7.1",
     "ember-cli-qunit": "0.3.13",
     "ember-cli-uglify": "^1.0.1",
     "ember-clipboard": "1.0.1",
@@ -34,6 +35,6 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-load": "0.0.1",
-    "ember-moment": "^1.0.0"
+    "ember-moment": "^4.1.0"
   }
 }
