--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,22 @@
 {
   "name": "ember-addons-website",
   "dependencies": {
-    "ember": "2.0.0-beta.1",
-    "ember-data": "1.13.4",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.4",
-    "ember-qunit": "0.3.3",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.15",
+    "ember": "1.13.11",
+    "ember-data": "1.13.15",
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit": "0.4.16",
+    "ember-qunit-notifications": "0.1.0",
+    "ember-resolver": "~0.1.20",
     "jquery": "2.1.3",
-    "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
+    "loader.js": "ember-cli/loader.js#3.4.0",
+    "qunit": "~1.20.0",
     "bootstrap": "~3.3.2",
     "ember-cli-moment-shim": "~0.0.3",
     "sifter": "~0.4.1",
     "clipboard": "~1.5.5",
     "moment": ">= 2.8.0",
     "moment-timezone": ">= 0.1.0"
-  },
-  "resolutions": {
-    "ember": "2.0.0-beta.1",
-    "qunit-notifications": "~0.1.0"
   }
 }
