--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.1.0",
     "ember-cli-filter-by-query": "1.0.3",
+    "ember-cli-font-awesome": "1.3.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
