--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,8 @@
 {
   "name": "ember-addons-website",
   "dependencies": {
-    "ember": "1.13.11",
-    "ember-data": "1.13.15",
-    "ember-cli-shims": "0.0.6",
+    "ember": "2.3.0",
+    "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.1",
     "ember-load-initializers": "0.1.7",
     "ember-qunit": "0.4.16",
@@ -19,5 +18,8 @@
     "moment": ">= 2.8.0",
     "moment-timezone": ">= 0.1.0",
     "font-awesome": "~4.4.0"
+  },
+  "resolutions": {
+    "ember": "2.3.0"
   }
 }
