--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-deploy": "0.5.1",
+    "ember-cli-deploy-aws-pack": "0.2.1",
     "ember-cli-deprecation-workflow": "0.1.5",
     "ember-cli-filter-by-query": "1.0.3",
     "ember-cli-font-awesome": "1.3.0",
