--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-addons-website",
   "dependencies": {
-    "ember": "2.8.0",
+    "ember": "2.9.0-beta.5",
     "ember-cli-shims": "0.1.1",
     "bootstrap": "~3.3.2",
     "ember-cli-moment-shim": "~0.0.3",
