--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-inline-content": "^0.4.0",
     "ember-cli-moment-shim": "0.7.3",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
