--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-addons-website",
   "dependencies": {
-    "ember": "2.9.0-beta.2",
+    "ember": "beta",
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.1",
     "ember-load-initializers": "0.1.7",
@@ -20,6 +20,6 @@
     "font-awesome": "~4.4.0"
   },
   "resolutions": {
-    "ember": "2.3.0"
+    "ember": "beta"
   }
 }
