--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-deploy": "0.6.3",
     "ember-cli-deploy-aws-pack": "0.4.0",
-    "ember-cli-deprecation-workflow": "0.1.5",
+    "ember-cli-deprecation-workflow": "^0.2.3",
     "ember-cli-filter-by-query": "1.0.3",
     "ember-cli-font-awesome": "1.3.0",
     "ember-cli-htmlbars": "^1.1.0",
     "ember-cli-htmlbars-inline-precompile": "^0.3.5",
-    "ember-cli-ic-ajax": "0.2.4",
+    "ember-cli-ic-ajax": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-inline-content": "^0.4.0",
     "ember-cli-moment-shim": "0.7.3",
