--- a/package.json
+++ b/package.json
@@ -3,54 +3,53 @@
   "version": "1.1.0",
   "description": "Search hundreds of modules that extend ember-cli.",
   "private": false,
+  "author": "",
+  "license": "MIT",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
+  "repository": "https://github.com/gcollazo/ember-cli-addon-search",
   "scripts": {
     "start": "ember server",
     "build": "ember build",
     "test": "ember test",
     "deploy": "ember deploy production"
   },
-  "repository": "https://github.com/gcollazo/ember-cli-addon-search",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
-  "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "^2.0.1",
-    "ember-cli": "2.8.0",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.6",
-    "ember-cli-dependency-checker": "^1.2.0",
+    "broccoli-asset-rev": "^2.4.5",
+    "ember-ajax": "^2.4.1",
+    "ember-cli": "2.11.1",
+    "ember-cli-app-version": "^2.0.0",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-clipboard": "0.5.0",
+    "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-deploy": "0.6.3",
     "ember-cli-deploy-aws-pack": "0.4.0",
     "ember-cli-deprecation-workflow": "^0.2.3",
     "ember-cli-filter-by-query": "1.0.3",
     "ember-cli-font-awesome": "1.3.0",
-    "ember-cli-htmlbars": "^1.1.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.5",
-    "ember-cli-ic-ajax": "^1.0.0",
-    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-inline-content": "^0.4.0",
-    "ember-cli-moment-shim": "0.7.3",
-    "ember-cli-qunit": "^2.1.0",
+    "ember-cli-moment-shim": "3.0.1",
+    "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-clipboard": "1.0.1",
-    "ember-data": "2.8.1",
-    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-legacy-views": "0.2.0",
-    "ember-load": "0.0.9",
-    "ember-load-initializers": "^0.5.1",
-    "ember-moment": "^4.1.0",
+    "ember-load": "0.0.11",
+    "ember-load-initializers": "^0.6.0",
+    "ember-moment": "7.3.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.1"
+    "ember-source": "~2.11.0",
+    "loader.js": "^4.0.10"
   }
 }
