--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.7.19",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load": "0.0.11",
