--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
-    "ember-cli": "2.11.1",
+    "ember-cli": "2.12.0-beta.2",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-clipboard": "0.5.0",
@@ -44,13 +44,13 @@
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-concurrency": "0.7.19",
-    "ember-data": "^2.11.0",
+    "ember-data": "^2.12.0-beta.4",
     "ember-export-application-global": "^1.0.5",
     "ember-load": "0.0.11",
     "ember-load-initializers": "^0.6.0",
     "ember-moment": "7.3.0",
     "ember-resolver": "^2.0.3",
-    "ember-source": "~2.11.0",
+    "ember-source": "2.12.0-beta.2",
     "loader.js": "^4.0.10"
   }
 }
