--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ember-cli-babel": "^5.1.7",
     "ember-cli-clipboard": "0.5.0",
     "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-deploy": "0.6.3",
+    "ember-cli-deploy": "^1.0.0",
     "ember-cli-deploy-aws-pack": "0.4.0",
     "ember-cli-deprecation-workflow": "^0.2.3",
     "ember-cli-filter-by-query": "1.0.3",
@@ -52,5 +52,12 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "2.12.0-beta.2",
     "loader.js": "^4.0.10"
+  },
+  "dependencies": {
+    "ember-cli-deploy-build": "^0.1.1",
+    "ember-cli-deploy-cloudfront": "^0.2.8",
+    "ember-cli-deploy-gzip": "^0.2.4",
+    "ember-cli-deploy-manifest": "^0.1.2",
+    "ember-cli-deploy-s3": "^0.4.0"
   }
 }
