--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 ---
 language: node_js
 node_js:
-  - "4"
+  - "6"
 
 sudo: false
 
 cache:
+  yarn: true
   directories:
-    - $HOME/.npm
-    - $HOME/.cache # includes bowers cache
+    - $HOME/.cache
 
 before_install:
-  - npm config set spin false
-  - npm install -g bower phantomjs-prebuilt
-  - bower --version
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+  - yarn global add phantomjs-prebuilt bower
   - phantomjs --version
 
 install:
-  - npm install
+  - yarn install --non-interactive
   - bower install
 
 script:
-  - npm test
+  - yarn test
