--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
     "bootstrap": "~3.3.2",
     "sifter": "~0.4.1",
     "moment": "^2.8.0",
-    "moment-timezone": "^0.5.0",
-    "font-awesome": "~4.4.0"
+    "moment-timezone": "^0.5.0"
   }
 }
