--- a/package.json
+++ b/package.json
@@ -21,45 +21,44 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.12.0-beta.2",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-babel": "^5.1.7",
-    "ember-cli-clipboard": "0.5.0",
-    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "^2.16.2",
+    "ember-cli-app-version": "^3.1.0",
+    "ember-cli-babel": "^6.8.2",
+    "ember-cli-clipboard": "^0.8.0",
+    "ember-cli-dependency-checker": "^2.0.1",
     "ember-cli-deploy": "^1.0.0",
-    "ember-cli-deploy-aws-pack": "0.4.0",
+    "ember-cli-deploy-aws-pack": "^1.0.1",
+    "ember-cli-deploy-build": "^1.1.1",
+    "ember-cli-deploy-cloudfront": "^1.2.0",
+    "ember-cli-deploy-gzip": "^1.0.1",
+    "ember-cli-deploy-manifest": "^1.1.0",
+    "ember-cli-deploy-s3": "^1.1.0",
     "ember-cli-deprecation-workflow": "^0.2.3",
-    "ember-cli-filter-by-query": "1.0.3",
-    "ember-cli-font-awesome": "1.3.0",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-filter-by-query": "^1.2.0",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-inline-content": "^0.4.0",
-    "ember-cli-moment-shim": "3.0.1",
-    "ember-cli-qunit": "^3.0.1",
-    "ember-cli-release": "^0.2.9",
+    "ember-cli-moment-shim": "^3.5.0",
+    "ember-cli-qunit": "^4.0.1",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-concurrency": "0.7.19",
-    "ember-data": "^2.12.0-beta.4",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load": "0.0.11",
-    "ember-load-initializers": "^0.6.0",
-    "ember-moment": "7.3.0",
-    "ember-resolver": "^2.0.3",
-    "ember-source": "2.12.0-beta.2",
-    "eslint-config-blimp": "^4.0.1",
-    "liquid-fire": "^0.27.1",
+    "ember-cli-test-loader": "^2.2.0",
+    "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^0.8.11",
+    "ember-data": "2.16.3",
+    "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "^4.0.0-alpha.13",
+    "ember-load": "0.0.12",
+    "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.5.0",
+    "ember-resolver": "^4.5.0",
+    "ember-source": "^2.16.2",
+    "eslint-config-blimp": "^5.0.0",
+    "liquid-fire": "^0.29.0",
     "loader.js": "^4.0.10"
   },
-  "dependencies": {
-    "ember-cli-deploy-build": "^0.1.1",
-    "ember-cli-deploy-cloudfront": "^0.2.8",
-    "ember-cli-deploy-gzip": "^0.2.4",
-    "ember-cli-deploy-manifest": "^0.1.2",
-    "ember-cli-deploy-s3": "^0.4.0"
-  }
+  "dependencies": {}
 }
